fix some tests for file-based directoryFactories